fix: ensure confirmation modal appears above all elements by adjusting z-index

--- a/apps/panel/src/components/molecules/bucket-more-popup/BucketMorePopup.module.scss
+++ b/apps/panel/src/components/molecules/bucket-more-popup/BucketMorePopup.module.scss
@@ -6,6 +6,7 @@
 .popoverContainer {
   width: 160px;
   padding: 0;
+  z-index: 4;
 }
 
 .popoverContent {
