--- a/apps/panel/src/components/molecules/confirmation/Confirmation.module.scss
+++ b/apps/panel/src/components/molecules/confirmation/Confirmation.module.scss
@@ -66,3 +66,7 @@
 .confirmButton:disabled:hover {
   background-color: var(--color-danger) !important;
 }
+
+[class^="Portal-module_container__"] {
+  z-index: 4;
+}
